--- a/public/index.html
+++ b/public/index.html
@@ -16,16 +16,15 @@
     <div id="root"></div>
     <script src="/build/bundle.js"></script>
     <script src="/socket.io/socket.io.js"></script>
-    <script>
-      var socket = io();
-      window.socket = socket;
-      socket.on("connect", function () {
+    <script defer>
+      window.socket = window.socket || io();
+      window.socket.on("connect", function () {
         console.info("connected");
       });
-      socket.on("disconnect", function () {
+      window.socket.on("disconnect", function () {
         console.info("disconnected from socketio");
       });
-      socket.on("esbuild-rebuilt", function () {
+      window.socket.on("esbuild-rebuilt", function () {
         console.info("Reloading due to esbuild rebuild...");
         window.location.reload();
       });
